fix: devuelve todos los items de manera correcta